k8s/goserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
spec:
  replicas: 10
  selector:
    matchLabels:
      app: goserver
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
      - name: goserver
        image: sodegelo/go-home:lastest
        ports:
        - containerPort: 80
