k8s/goserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  type: LoadBalancer
  selector: 
    app: goserver
  ports:
  - port: 80
    targetPort: 80
