k8s/goserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: meusite.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-home
            port:
              number: 80
      - pathType: Prefix
        path: "/checkout"
        backend:
          service:
            name: service-checkout
            port:
              number: 3000
